Issue #1: Add new item, save to LocalStorage
Modifications:
- Can now add new items, dismiss specific ones.
- Saved in LocalStorage so can close browser and still persist.
- Auto focus textarea for adding new item.
- Tab navigation works fine.

Implemented by: @garrypeace

--- a/src/app/surface/surface.component.html
+++ b/src/app/surface/surface.component.html
@@ -1,5 +1,16 @@
 <div class="container">
-  <app-item *ngFor="let item of items | async" [item]="item"></app-item>
-</div>
+  <app-item
+    *ngFor="let item of items | async"
+    [item]="item"
+    (removeItemEvent)="dismiss(item)"
+  ></app-item>
 
-<button mat-button color="primary">do thing</button>
+  <mat-form-field class="example-full-width">
+    <textarea
+      matInput
+      #input
+      (keydown.control.enter)="onCtrlEnter(input)"
+    ></textarea>
+    <mat-hint>CTRL-Enter to save. </mat-hint>
+  </mat-form-field>
+</div>
