--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <mat-card-content>{{ item?.note }}</mat-card-content>
   <mat-card-actions>
-    <button mat-button>DISMISS</button>
+    <button mat-button (click)="dismiss(item)">DISMISS</button>
     <button mat-button>REMIND ME LATER</button>
   </mat-card-actions>
 </mat-card>
