--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,7 +1,11 @@
 <mat-card>
-  <mat-card-content>{{ item?.note }}</mat-card-content>
+  <mat-card-content
+    >{{ item.note }} ({{
+      item.reminderDate | date : "mediumTime"
+    }})</mat-card-content
+  >
   <mat-card-actions>
     <button mat-button (click)="dismiss(item)">DISMISS</button>
-    <button mat-button>REMIND ME LATER</button>
+    <button mat-button (click)="open()">REMIND ME LATER</button>
   </mat-card-actions>
 </mat-card>
