--- a/src/app/surface/surface.component.scss
+++ b/src/app/surface/surface.component.scss
@@ -2,13 +2,19 @@
   display: flex;
   flex-direction: column;
   align-items: end;
+  height: 100%;
 
   .container {
     width: 300px;
+    margin: 10px;
 
     mat-form-field {
       padding: 0;
       width: 100%;
+    }
+
+    #add.mat-mdc-form-field-textarea-control::placeholder {
+      color: rgba(255, 255, 255, 0.15);
     }
   }
 }
